@@ -14,6 +14,7 @@
  9. When listing works under a genre filter by that genre.
 10. Don't show 'Search within list' for advanced search results.
 11. Attempt to have more consistent toolbar icon positions.
+12. Fix hiding 'Alarm' and 'DSTM' settings in player extra settings.
 
 5.0.1
 -----
